--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # BASE_URL_DEV=http://localhost:8000/api/v1/
-BASE_URL_DEV=https://4b6f-209-35-167-210.ngrok.io
+BASE_URL_DEV=https://4b6f-209-35-167-210.ngrok.io/api/v1/
