--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# BASE_URL_DEV=http://localhost:8000/api/v1/
-BASE_URL_DEV=https://e1e0-110-54-166-199.ngrok.io/api/v1/
+BASE_URL_DEV=http://localhost:8000/api/v1/
+# BASE_URL_DEV=https://e1e0-110-54-166-199.ngrok.io/api/v1/
